--- a/content/fundamentals2.mdx
+++ b/content/fundamentals2.mdx
@@ -46,25 +46,10 @@ Lisää edelliseen sovellukseen toinen <code>print</code>-käsky edellisen alle,
 Lisää edelliseen sovellukseen vielä kolmaskin <code>print</code>-käsky!
 
 </Segment>
-Onneksi olkoon! Olet selvinnyt ensimmäisestä haasteesta. Tähän mennessä olet oppinut sekä hyödyllisen <code>print</code>-käskyn, että sen, että tietokone suorittaa annetut käskyt peräjälkeen alusta loppuun.
-Loppujen lopuksi tietokone ei osaa tehdä kovin montaa eri asiaa. Pääosin tietokone osaa suorittaa laskutoimituksia tietokoneen muistissa olevien arvojen
-avulla. Ohjelmointikielissä käytetään <code>muuttujia</code> kuvaamaan tietokoneen muistissa olevia asioita.
-
-
-Muuttuja ohjelmointikielessä on hieman eri asia kuin matematiikassa. Matematiikassa muuttuja kuvaa jotain "random" lukua, ohjelmointikielessä muuttuja
-taas on eräänlainen lokero, johon voidaan sijoittaa esimerkiksi luku tai vaikkapa tekstiä. Tietokone siis "muistaa" mikä luku tai teksti muuttujaan - tai lokeroon - on tallennettu, ja tietokone
-osaa suorittaa näiden muistissa olevien lukujen avulla esim. laskutoimituksia.
-
-<Obs>
-Muuttujan ero matematiikassa ja ohjelmointikielissä:
-* Matematiikassa muuttuja kuvaa jotain "random" lukua.
-* Ohjelmointikielissä muuttujalla on aina jokin arvo (joka on tietokoneen muistissa ohjelmaa suoritettaessa).
-</Obs>
 
 Onneksi olkoon! Olet selvinnyt ensimmäisestä haasteesta. Tähän mennessä olet oppinut sekä hyödyllisen <code>print</code>-käskyn, että sen, että tietokone suorittaa annetut käskyt peräjälkeen alusta loppuun.
 Loppujen lopuksi tietokone ei osaa tehdä kovin montaa eri asiaa. Pääosin tietokone osaa suorittaa laskutoimituksia tietokoneen muistissa olevien arvojen
 avulla. Ohjelmointikielissä käytetään <code>muuttujia</code> kuvaamaan tietokoneen muistissa olevia asioita.
-
 
 Muuttuja ohjelmointikielessä on hieman eri asia kuin matematiikassa. Matematiikassa muuttuja kuvaa jotain "random" lukua, ohjelmointikielessä muuttuja
 taas on eräänlainen lokero, johon voidaan sijoittaa esimerkiksi luku tai vaikkapa tekstiä. Tietokone siis "muistaa" mikä luku tai teksti muuttujaan - tai lokeroon - on tallennettu, ja tietokone
@@ -79,7 +64,8 @@ Muuttujan ero matematiikassa ja ohjelmointikielissä:
 <Segment title="2. Muuttujat">
 Alla olevassa sovelluksessa on asetettu muuttujille <code>a</code>, <code>b</code> ja <code>nimi</code> arvot. Kun muuttujalle asetetaan arvo,
 muuttujaa voidaan käyttää jatkossa esimerkiksi laskutoimituksissa. Huomaa että muuttujien <code>a</code> ja <code>b</code> arvot ovat kokonaislukuja (<code>integer</code>) kun taas
-muuttujan <code>nimi</code> arvo on tekstiä (<code>string</code>).
+muuttujan <code>nimi</code> arvo on "tekstiä" eli merkkijono. (<code>string</code>).
+
 <Obs>
 Muuttujan nimeämisessä täytyy ottaa muutama seikka huomioon:
 
@@ -174,8 +160,8 @@ Suoraan syvään päähän: Jos suorakulmion kateettien pituudet ovat 2 ja 3, la
 pituuksina!
 
 <Task>4.3</Task>
-Jos ympyrän säteen pituus on <code>3</code>, laske ympyrän pinta-ala. (Huomaa <code>math</code>-kirjastosta tuotu <code>pi</code>, joka ei ole funktio vaan muuttuja, jonka arvoksi on valmiiksi
-asetettu et ikinä arvaa mikä)
+Jos ympyrän säteen pituus on <code>3</code>, laske ympyrän pinta-ala. (Huomaa <code>math</code>-kirjastosta tuotu <code>pi</code>, joka ei ole funktio vaan muuttuja, jonka 
+arvona on piin likiarvo.
 </Segment>
 
 <Segment title="5. Muuttujatyypit">
