--- a/content/fundamentals2.mdx
+++ b/content/fundamentals2.mdx
@@ -50,22 +50,6 @@ Onneksi olkoon! Olet selvinnyt ensimmäisestä haasteesta. Tähän mennessä ole
 Loppujen lopuksi tietokone ei osaa tehdä kovin montaa eri asiaa. Pääosin tietokone osaa suorittaa laskutoimituksia tietokoneen muistissa olevien arvojen
 avulla. Ohjelmointikielissä käytetään <code>muuttujia</code> kuvaamaan tietokoneen muistissa olevia asioita.
 
-
-Muuttuja ohjelmointikielessä on hieman eri asia kuin matematiikassa. Matematiikassa muuttuja kuvaa jotain "random" lukua, ohjelmointikielessä muuttuja
-taas on eräänlainen lokero, johon voidaan sijoittaa esimerkiksi luku tai vaikkapa tekstiä. Tietokone siis "muistaa" mikä luku tai teksti muuttujaan - tai lokeroon - on tallennettu, ja tietokone
-osaa suorittaa näiden muistissa olevien lukujen avulla esim. laskutoimituksia.
-
-<Obs>
-Muuttujan ero matematiikassa ja ohjelmointikielissä:
-* Matematiikassa muuttuja kuvaa jotain "random" lukua.
-* Ohjelmointikielissä muuttujalla on aina jokin arvo (joka on tietokoneen muistissa ohjelmaa suoritettaessa).
-</Obs>
-
-Onneksi olkoon! Olet selvinnyt ensimmäisestä haasteesta. Tähän mennessä olet oppinut sekä hyödyllisen <code>print</code>-käskyn, että sen, että tietokone suorittaa annetut käskyt peräjälkeen alusta loppuun.
-Loppujen lopuksi tietokone ei osaa tehdä kovin montaa eri asiaa. Pääosin tietokone osaa suorittaa laskutoimituksia tietokoneen muistissa olevien arvojen
-avulla. Ohjelmointikielissä käytetään <code>muuttujia</code> kuvaamaan tietokoneen muistissa olevia asioita.
-
-
 Muuttuja ohjelmointikielessä on hieman eri asia kuin matematiikassa. Matematiikassa muuttuja kuvaa jotain "random" lukua, ohjelmointikielessä muuttuja
 taas on eräänlainen lokero, johon voidaan sijoittaa esimerkiksi luku tai vaikkapa tekstiä. Tietokone siis "muistaa" mikä luku tai teksti muuttujaan - tai lokeroon - on tallennettu, ja tietokone
 osaa suorittaa näiden muistissa olevien lukujen avulla esim. laskutoimituksia.
@@ -79,7 +63,9 @@ Muuttujan ero matematiikassa ja ohjelmointikielissä:
 <Segment title="2. Muuttujat">
 Alla olevassa sovelluksessa on asetettu muuttujille <code>a</code>, <code>b</code> ja <code>nimi</code> arvot. Kun muuttujalle asetetaan arvo,
 muuttujaa voidaan käyttää jatkossa esimerkiksi laskutoimituksissa. Huomaa että muuttujien <code>a</code> ja <code>b</code> arvot ovat kokonaislukuja (<code>integer</code>) kun taas
-muuttujan <code>nimi</code> arvo on tekstiä (<code>string</code>).
+
+muuttujan <code>nimi</code> arvo on "tekstiä" eli merkkijono. (<code>string</code>).
+
 <Obs>
 Muuttujan nimeämisessä täytyy ottaa muutama seikka huomioon:
 
@@ -98,7 +84,10 @@ Kokeile painaa play-nappulaa ja kiinnitä huomiota siihen mitä ohjelma tulostaa
 <iframe src="https://trinket.io/embed/python3/59b7d176f4?runOption=run" width="100%" height="300" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 
 <Obs>
-Merkki <code>=</code> ei tarkoita samaa asiaa kuin matematiikassa, eli toisin sanoen merkki ei ole "yhtä suuri kuin". Python-ohjelmointikielessä merkki <code>=</code> on niin sanottu <em>sijoitusoperaattori</em>.
+
+Merkki <Code>=</Code> ei tarkoita samaa asiaa kuin matematiikassa, eli toisin sanoen merkki ei ole "yhtä suuri kuin". 
+Python-ohjelmointikielessä merkki <Code>=</Code> on niin sanottu <em>sijoitusoperaattori</em>.
+
 Käsky <Code>a = 3</Code> ei siis tarkoita "<code>a</code> on yhtäsuuri kuin 3" vaan "muuttujan arvoksi <code>a</code> asetetaan arvo 3". Samalla koska
 muuttujaa <code>a</code> ei ole aiemmin määritelty, muuttuja nimeltä <code>a</code> otetaan samalla käyttöön.
 
@@ -121,8 +110,13 @@ Lisäksi, muuttujan <code>koko_nimi</code> arvoksi asetetaan muuttujien <code>et
 Aja koodi ja ihmettele tulosta!
 
 <Task>2.3</Task>
-Laita ohjelma tulostamaan jonkin sellaisen muuttujan arvo jota ei ole määritelty, esim. <Code>print(e)</Code> käskyn avulla. Katso tarkasti mitä
-virheilmoitus sanoo.
+Laita ohjelma tulostamaan jonkin sellaisen muuttujan arvo jota ei ole määritelty, esim. <Code>print(e)</Code> käskyn avulla, joka yrittää
+tulostaa ei-määritellyn muuttujan <code>e</code> arvon. Katso tarkasti mitä virheilmoitus sanoo.
+
+<Task>2.4</Task>
+Testataan vielä yhtäsuuruusmerkkiä, joka Pythonissa on <Code>==</Code>. Lisää koodiin käsky <Code>print(a == b)</Code>. Aja ohjelma ja katso mitä kyseinen
+käsky tulostaa.
+
 </Segment>
 
 
@@ -156,8 +150,8 @@ joka on "jakojäännös" (ja jonka unohdamme samantien). Pythonissa on lisäksi 
 * miinuslasku: `-`
 * Potenssilasku: `2**3` tarkoittaa "2 potenssiin 3".
 
+Alla on esimerkki muutaman eri laskutoimituksen käytöstä.
 
-Alla on esimerkki laskutoimitusten käytöstä.
 <Obs>Alla olevassa koodissa <code>import</code> käskyllä otetaan käyttöön <code>math</code>-<em>kirjasto</em>, joka sisältää useita hyödyllisiä
 matematiikkaan liittyviä funktioita! Funktio <code>sqrt</code> on neliöjuuri (square root).
 Python on suosittu ohjelmointikieli osittain siksi että Pythonille löytyy lukematon määrä erilaisia kirjastoja, joten jokaista pyörää ei tarvitse keksiä
@@ -174,8 +168,10 @@ Suoraan syvään päähän: Jos suorakulmion kateettien pituudet ovat 2 ja 3, la
 pituuksina!
 
 <Task>4.3</Task>
-Jos ympyrän säteen pituus on <code>3</code>, laske ympyrän pinta-ala. (Huomaa <code>math</code>-kirjastosta tuotu <code>pi</code>, joka ei ole funktio vaan muuttuja, jonka arvoksi on valmiiksi
-asetettu et ikinä arvaa mikä)
+Jos ympyrän säteen pituus on <code>3</code>, laske ympyrän pinta-ala. Huomaa <code>math</code>-kirjastosta tuotu <code>pi</code>, joka ei ole funktio vaan muuttuja, jonka 
+arvona on piin likiarvo. Käytä tätä muuttujaa apuna.
+
+
 </Segment>
 
 <Segment title="5. Muuttujatyypit">
