Add equation generator

--- a/content/algorithms.mdx
+++ b/content/algorithms.mdx
@@ -1,3 +1,7 @@
+---
+title: "Algoritmit"
+---
+
 Olet varmasti kuullut algoritmeistä. Algoritmi on Wikipedia mukaan määritelty seuraavasti:
 <Quote>Algoritmi on yksityiskohtainen kuvaus tai ohje siitä, miten tehtävä tai prosessi suoritetaan; jota seuraamalla voidaan ratkaista tietty ongelma.</Quote>
 
