--- a/content/math.mdx
+++ b/content/math.mdx
@@ -1,3 +1,7 @@
+---
+title: "Hieman matikkaa"
+---
+
 Tässä osiossa teemme hieman matematiikkaa Pythonin avulla aiemmin opittujen asioiden avulla. Koodaamisen kautta keraamme muutamia matematiikkaa liittyviä asioita. Käytämme
 mm. Pythagoraan lausetta ja palautamme mieleen mikä suoran kulmakerroin taas olikaan.
 
