--- a/content/algorithms.mdx
+++ b/content/algorithms.mdx
@@ -93,5 +93,5 @@ Tee sovellus, joka laskee kuinka monta kakkosta on listassa.
 Tee sovellus, joka laskee kuinka monta parillista lukua listassa on. Tarvitset tässä modulo-laskutoimitusta, joka laskee ala-asteelta tutun jakojäännöksen. 
 Esimerkiksi laskutoimituksen <Code>9 % 3</Code> tulos on <code>0</code>, sillä kun 9 jaetaan luvulla 3, jakojäännös on 0.
 <Task>3.3</Task>
-Muuta sovellusta siten että se laskeekin kuinka monta parillista lukua listassa on.
+Muuta sovellusta siten että se laskeekin kuinka monta paritonta lukua listassa on.
 </Segment>
