--- a/content/algorithms.mdx
+++ b/content/algorithms.mdx
@@ -91,7 +91,8 @@ Tee sovellus, joka laskee kuinka monta kakkosta on listassa.
 
 <Task>3.2</Task>
 Tee sovellus, joka laskee kuinka monta parillista lukua listassa on. Tarvitset tässä modulo-laskutoimitusta, joka laskee ala-asteelta tutun jakojäännöksen. 
-Esimerkiksi laskutoimituksen <Code>9 % 3</Code> tulos on <code>0</code>, sillä kun 9 jaetaan luvulla 3, jakojäännös on 0.
+Esimerkiksi laskutoimituksen <Code>9 % 3</Code> tulos on <code>0</code>, sillä kun 9 jaetaan luvulla 3, jakojäännös on 0. Laskutoimituksen <Code>8 % 3</Code> tulos
+ taasen on <code>2</code>, sillä jako ei mene tasan.
 <Task>3.3</Task>
 Muuta sovellusta siten että se laskeekin kuinka monta paritonta lukua listassa on.
 </Segment>
