--- a/content/fundamentals.mdx
+++ b/content/fundamentals.mdx
@@ -134,12 +134,12 @@ Katselmoidaan alla olevaa esimerkkiä: Suorita ohjelma!
 <iframe src="https://trinket.io/embed/python3/6ff25d8c71?runOption=run" width="100%" height="300" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 
 <Task>3.1</Task>
-Tee vastaavanlainen ohjelma siten että määrittelet kaksi muuttujaa <code>nimi</code> ja <code>fav_color</code> asettamalla näille jotkin arvot. Lisäksi ohjelman tulee
-tulostaa (esimerkiksi) teksti <code>tyypin Tumppu lempiväri on sininen</code> käyttämällä hyväksi em. muuttujan arvoja.
+Tee vastaavanlainen ohjelma siten että määrittelet kaksi muuttujaa <code>name</code> ja <code>fav_color</code> asettamalla näille jotkin arvot. Lisäksi ohjelman tulee
+tulostaa (esimerkiksi) teksti <code>Tyypin Anni lempiväri on sininen</code> käyttämällä hyväksi em. muuttujan arvoja.
 
 <Task>3.2</Task>
 Lisää ohjelmaan vielä kolmas muuttuja nimeltä <code>fav_animal</code> ja aseta tälle vaikka arvo <code>"pupu"</code>. Ohjelman tulee tulostaa muuttujien avulla
-(esimerkiksi) teksti <code>tyypin Tumppu lempiväri on sininen ja suosikkieläin on pupu.</code>
+(esimerkiksi) teksti <code>Tyypin Anni lempiväri on sininen ja suosikkieläin on pupu.</code>
 </Segment>
 
 <Segment title="4. Peruslaskutoimitukset">
