--- a/content/ifelse.mdx
+++ b/content/ifelse.mdx
@@ -1,3 +1,6 @@
+---
+title: "Ehtolauseet"
+---
 
 Ehtolauseiden avulla ohjelma voi suorittaa vaihtoehtoisia asioita riippuen siitä onko jokin ehto tosi vai epätosi. Python-ohjelmointikielessä
 ehtolauseita laaditaan if - else if - else -rakenteen avulla. Tässä osiossa tutustutaan ehtolauseiden käyttöön.
