--- a/content/loops.mdx
+++ b/content/loops.mdx
@@ -26,7 +26,7 @@ Kokeile lisätä silmukkaan toinenkin <code>print</code>-käsky. Käsky voi tulo
 <Segment title="2. For-lause, osa 2">
 Suorita ohjelma ja tutkaile ohjelman tulostetta. Tässä osiossa ei ole tehtäviä, tämä toimii lähinnä demonstraationa siitä miten silmukka toimii.
 <Obs>
-Silmukan yhden kierroksen aikana suoritetaan 4 käskyä. Huomaa sisennykset riveillä 5, 6, 7 ja 8.
+Silmukan yhden kierroksen aikana suoritetaan 4 käskyä. Huomaa sisennykset riveillä 5, 6, 7.
 </Obs>
 <Trinket id="c470564e43" height="350"/>
 </Segment>
@@ -44,7 +44,7 @@ tämän tietokoneelle. Toteuta tämä alla olevaan koodipohjaan.
 ### 2.2
 Taksimatkan aloitusmaksu on 5 € ja kilometritaksa 2 € / km. Muodosta funktio jonka avulla voidaan laskea taksimatkan kokonaishinta, kun taksilla kuljetun
 matkan pituus on x. Tee sovellus, joka laskee taksimatkan hinnat muuttujien arvoilla 0 ... 6. Käske ohjelmaa tulostamaan jokaisella silmukan kierroksella sekä 
-taksimatkan pituus että hinta, esimerkiksi seuraavasti: "<em>Taksimatkan pituus on 1 km ja hinta 7 €</em>".
+taksimatkan pituus että hinta, esimerkiksi seuraavasti: ```Taksimatkan pituus on 1 km ja hinta 7 €```Y.
 
 <Obs>
 Muista että sisennyksellä Pyhtonissa kerrotaan mitkä käskyt ovat osa silmukkaa.
