--- a/content/math.mdx
+++ b/content/math.mdx
@@ -30,7 +30,7 @@ Tee ohjelma joka pyytää syötteenä kaksi eri lukua, tuotteen hinnan ja alennu
 * tuotteen alennettu hinta
 
 Voit käyttää joko ```read_int``` tai ```read_float``` funktiota syötteiden lukemiseksi.
-<iframe src="https://trinket.io/embed/python3/97e8e92056?runOption=run" width="100%" height="350" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+<Trinket id="97e8e92056" height="350"/>
 
 </Segment>
 
