--- a/content/functions.mdx
+++ b/content/functions.mdx
@@ -4,38 +4,45 @@ title: "Funktiot"
 
 
 <Segment title="1. Eka funktio">
+
 Mikä funktio ohjelmointikielessä oikein on? Tyypillisesti funktio on samanlainen kuin matematiikassa: funktiolle syötetään jokin arvo
 tai arvoja ("input") ja näiden arvojen avulla lasketaan jotain ja pullautetaan tulos ulos ("output").
-Alla olevassa esimerkissä on määritelty funktio nimeltä <code>summa</code> jolle voidaan syöttää inputtina kaksi lukua <code>x</code> ja <code>y</code>.
-Funktio laskee lukujen <code>x</code> ja <code>y</code> summan ja pullauttaa tämän ulos.
+Alla olevassa esimerkissä on määritelty funktio nimeltä ```summa``` jolle voidaan syöttää inputtina kaksi lukua ```x``` ja ```y```.
+Funktio laskee lukujen ```x``` ja ```y``` summan ja pullauttaa tämän ulos.
 
 <Obs>
+
 Virallinen termi ulos pullauttamiselle on "palauttaa arvo", tästä syystä
-Pythonissa käytetään <code>return</code> nimistä käskyä funktioissa.
+Pythonissa käytetään ```return``` nimistä käskyä funktioissa.
+
 </Obs>
 
 <Obs>
-<code>def</code> tulee sanasta <em>define</em> eli "määrittele". Huomaa myös sisennys rivillä 2. Sisennys kertoo Pythonissa mitkä käskyt ovat
+
+```def``` tulee sanasta <em>define</em> eli "määrittele". Huomaa myös sisennys rivillä 2. Sisennys kertoo Pythonissa mitkä käskyt ovat
 osa funktiota. Sisennys tehdään tabulaattori-näppäimen avulla. Tabulaattori on Caps Lock -näppäimen yläpuolella. Mikä on sitten Caps Lock näppäin? No, se 
-on tietysti tabulaattorin alapuolella!</Obs>
+on tietysti tabulaattorin alapuolella!
+
+</Obs>
 <br />
 <Trinket id="9fb9364433" height="400"/>
 
 <Obs>
-Edellisessä on syytä kiinnittää huomiota riviin 5, jossa on käsky <Code>summa(3, 5)</Code>. Koska kyseessä on sijoitusoperaatio, käsky on syytä taas ajatella "oikealta vasemmalle":
+
+Edellisessä on syytä kiinnittää huomiota riviin 5, jossa on käsky ```summa(3, 5)```. Koska kyseessä on sijoitusoperaatio, käsky on syytä taas ajatella "oikealta vasemmalle":
 
 ***
 
 * Funktiokutsu ```summa(3, 5)``` laskee lukujen 3 ja 5 summan ja palauttaa summan arvon.
-* Palautettu arvo sijoitetaan muuttujaan <code>tulos</code>
+* Palautettu arvo sijoitetaan muuttujaan ```tulos```
 
 </Obs>
 
-Seuraavaksi rohkeasti kokeilemaan omien funktioiden laadintaa! Testaa laatimiesi funktioden toimintaa <code>print</code> käskyn avulla.
+Seuraavaksi rohkeasti kokeilemaan omien funktioiden laadintaa! Testaa laatimiesi funktioden toimintaa ```print``` käskyn avulla.
 
 ### 1.1
 
-Nimeä funktio uudestaan ja anna sille nimi <code>tulo</code> ja muokkaa funktiota siten että se laskee lukujen <code>x</code> ja <code>y</code> tulon
+Nimeä funktio uudestaan ja anna sille nimi ```tulo``` ja muokkaa funktiota siten että se laskee lukujen ```x``` ja ```y``` tulon
 ja palauttaa tulon arvon.
 
 ### 1.2
@@ -49,21 +56,26 @@ Luo uusi funktio, joka laskee kolmen argumenttina annetun luvun tulon.
 
 <Segment title="2. Matematiikasta tuttuja funktioita">
 
-Muista seuraavissa tehtävissä testata laatimiesi funktioiden toimintaa <code>print</code>-käskyn avulla.
+Muista seuraavissa tehtävissä testata laatimiesi funktioiden toimintaa ```print```-käskyn avulla.
 <Trinket id="6952c692bc" height="300"/>
 
 ### 2.1
 
-Luo funktio nimeltä <code>piiri</code>, jolle syötetään säteen <code>r</code> pituus. Funktion tulee laskea ympyrän kehän pituus.
-<Obs>Huom! Koodiin on valmiiksi lisätty käsky <Code>from math import sqrt, pi</Code> joten käytössäsi on muuttuja <code>pi</code> (pii) ja funktio <code>sqrt</code> eli neliöjuuri.</Obs>
+Luo funktio nimeltä ```piiri```, jolle syötetään säteen ```r``` pituus. Funktion tulee laskea ympyrän kehän pituus.
+
+<Obs>
+
+Koodiin on valmiiksi lisätty käsky ```from math import sqrt, pi``` joten käytössäsi on muuttuja ```pi``` (pii) ja funktio ```sqrt``` eli neliöjuuri.
+
+</Obs>
 
 ### 2.2
 
-Luo funktio nimeltä <code>pinta_ala</code>, jolle syötetään säteen <code>r</code> pituus. Funktion tulee laskea ympyrän pinta-ala.
+Luo funktio nimeltä ```pinta_ala```, jolle syötetään säteen ```r``` pituus. Funktion tulee laskea ympyrän pinta-ala.
 
 ### 2.3
 
-Luo funktio nimeltä <code>hypotenuusa</code>, jolle annetaan inputtina kaksi eri lukua <code>a</code> ja <code>b</code>, jotka ovat suorakulmaisen
+Luo funktio nimeltä ```hypotenuusa```, jolle annetaan inputtina kaksi eri lukua ```a``` ja ```b```, jotka ovat suorakulmaisen
 kolmion kateettien pituudet. Funktion tulee laskea hypotenuusan pituus.
 </Segment>
 
@@ -80,18 +92,24 @@ matematiikassa.
 
 ### 3.1
 
-Luo funktio nimeltä <code>greeter2</code> jolle syötetään kaksi eri muuttujan arvoa ```first_name``` ja ```last_name```. Funktio ei palauta
+Lisää edelliseen koodiin funktio nimeltä ```greeter2``` jolle syötetään kaksi eri muuttujan arvoa ```first_name``` ja ```last_name```. Funktio ei palauta
 mitään arvoja vaan sen sijasta tulostaa muuttujien arvojen avulla esimerkiksi seuraavanlaisen tekstin:
 
-```Hyvää iltapäivää Oliver Stark. Voinko kutsua sinua etunimelläsi Oliver?```
+```Hyvää päivää Oliver Starck. Voinko kutsua sinua etunimelläsi Oliver?```
 
 ### 3.2
 
 <Obs>
-Jos funktiolle ei syötetä arvoja, tällöin funktio määritelmässä täytyy kuitenkin olla sulkeet, mutta sulkeiden sisälle ei laiteta mitään, esim.
-seuraavasti:<br />
-<Code>def oma_funktio():</Code><br />
+
+Jos funktiolle ei syötetä arvoja, tällöin funktio määritelmässä täytyy kuitenkin olla sulkeet, mutta sulkeiden sisälle ei laiteta mitään.
+Alla esimerkki funktion määrittelystä, jolla ei ole argumentteja ja joka palauttaa aina arvon sata.
+```
+def sata():
+  return 100
+```
+
 </Obs>
-Luo funktio jolle ei syötetä mitään arvoa. Funktio ainoastaan tulostaa tekstin <code>moi!</code>.
+
+Luo funktio jolle ei syötetä mitään arvoa. Funktio ainoastaan tulostaa tekstin ```moi!```.
 
 </Segment>
